# viz

./: .gitignore  CMakeLists.txt  README.md
assets/: test_poses.txt
config/: app.cfg  app_synthetic.cfg  camera_config.xml  camera_poses.txt
examples/: app.cfg
examples/trackables/cam/: ecm_j.txt  ecm_suj.txt  trk.cfg
examples/trackables/psm1/: psm1_j.txt  psm1_suj.txt  trk.cfg
examples/trackables/psm2/: psm2_j.txt  psm2_suj.txt  trk.cfg
include/: api_stream.h  camera.hpp  config_reader.hpp  davinci.hpp  fourier_descriptor.hpp  model.hpp  pose_grabber.hpp  resources.hpp  snippets.hpp  sub_window.hpp  trackable.hpp  video.hpp  vizApp.hpp
resources/: phong_frag.glsl  resources.rc
scripts/: compare.m  read_se3.m
src/: CMakeLists.txt  camera.cpp  davinci.cpp  fourier_descriptor.cpp  main.cpp  model.cpp  pose_grabber.cpp  snippets.cpp  sub_window.cpp  trackable.cpp  video.cpp  vizApp.cpp
vc11/: Resources.rc  resource.h  viz.rc  viz.sln  viz.vcxproj  viz.vcxproj.filters
